<resources>
    <string name="app_name">संगोष्ठि</string>

    <string name="login_text_register">अपना फोन नंबर डालें</string>
    <string name="login_hint_phone">अपना फोन नंबर डालें</string>
    <string name="login_phone_error">कृपया सही नंबर डाले !</string>
    <string name="login_btn_sign_in">जमा करें</string>

    <string name="home_host_show">प्रोग्राम देखें</string>
    <string name="home_notifications">सूचना</string>
    <string name="home_help">विषय सूची</string>
    <string name="home_text_welcome">स्वागत हैं</string>

    <string name="show_play_pause">रोकें/चलाएँ</string>

    <string name="btn_show_play_pause_feedback_play">डॉक्टर की राय  सुने</string>
    <string name="btn_show_play_pause_feedback_pause">रोकें</string>
    <string name="btn_show_play_pause_feedback_resume">चलाएँ</string>
    <string name="btn_show_play_pause_content_play">आज का विचार सुने</string>
    <string name="btn_show_play_pause_content_pause">रोकें</string>
    <string name="btn_show_play_pause_content_resume">चलाएँ</string>
    <string name="btn_show_play_pause_question_play">आज का question सुने</string>
    <string name="btn_show_play_pause_question_pause">रोकें</string>
    <string name="btn_show_play_pause_question_resume">चलाएँ</string>
    <string name="btn_show_play_pause_answer_play">आज का answer सुने</string>
    <string name="btn_show_play_pause_answer_pause">रोकें</string>
    <string name="btn_show_play_pause_answer_resume">चलाएँ</string>
    <string name="btn_show_play_pause_question_answer_play">आज का question-answer सुने</string>
    <string name="btn_show_play_pause_question_answer_pause">रोकें</string>
    <string name="btn_show_play_pause_question_answer_resume">चलाएँ</string>

    <string name="btn_start_show">शुरू करें</string>
    <string name="btn_call_broadcaster">कॉल करें</string>
    <string name="btn_call_listeners">बाकी सभी आशा को जोड़े</string>
    <string name="btn_ok">सही</string>
    <string name="btn_cancel">छोड़े</string>
    <string name="btn_yes">हाँ</string>
    <string name="btn_no">नही</string>

    <string name="tv_num_of_listeners">आशा : %1$d / %2$s</string>
    <string name="tv_chronometer_start_show">इंतजार का समय \n%1$d : %2$d : %3$d</string>

    <!-- Dummy text strings -->
    <string name="dummy_phone_num">0123456789</string>

    <!-- Content Desciptions -->
    <string name="cd_iv_mute_unmute">Mute Unmute</string>
    <string name="cd_iv_question">Question Asked</string>
    <string name="cd_iv_online">User Online</string>
    <string name="cd_btn_start_show">Start Show</string>
    <string name="cd_iv_locked_unlocked">Locked Unlocked</string>
    <string name="cd_ib_call_broadcaster">कॉल की प्रतीक्षा करें</string>
    <string name="cd_image">Image</string>

    <!-- Placeholders -->
    <string name="placeholder_tv_show_topic">नये प्रोग्राम की जानकारी जल्द ही आएगी</string>
    <string name="placeholder_tv_num_of_listeners">आशा : 3</string>
    <string name="placeholder_tv_chronometer_start_show">00:00</string>
    <string name="placeholder_tv_notification">सूचना/ दिशा निर्देश</string>
    <string name="placeholder_tv_tutorial">विषय सूची</string>
    <string name="placeholder_tv_date">13 july, 2017</string>
    <string name="placeholder_tv_file_name">file_name.mp4</string>
    <string name="placeholder_tv_media_name">विषय सूची</string>

    <!-- Messages String -->
    <string name="progress_dialog_calling_broadcaster">कॉल की प्रतीक्षा करें</string>
    <string name="progress_dialog_please_wait">कृपया रुकिये</string>
    <string name="progress_dialog_reconnecting_call">कॉल की प्रतीक्षा करें</string>
    <string name="dialog_box_end_show_title">प्रोग्राम अंत करें</string>
    <string name="dialog_box_end_show_message">क्या आप इस प्रोग्राम की कॉल को सही मे ख़तम करना चाहतें हैं</string>
    <string name="dialog_box_update_show_status_title">क्या आज का प्रोग्राम सही से हो गया?</string>
    <string name="dialog_box_update_show_status_message">अगर आप अगले प्रोग्राम के तैयार तो हाँ दबाए और अगर अभी आपको और कॉल करने की ज़रुरत हैं तो फिर नही दबाए |</string>

    <string name="error_phone_not_registered">फोन रिजिस्टर्ड नही हैं</string>

    <string name="toast_back_disabled">खेद ! वापस नही जा सकते</string>
    <string name="toast_no_internet">खेद ! इंटरनेट नही चल रहा</string>
    <string name="toast_server_error">कंप्यूटर सर्वर से  संपर्क नहीं हो पा रहा, कृपया एडमिनिस्ट्रेटर की सहायता लें</string>
    <string name="toast_calling_listeners">कॉल मिलाई जा रही हैं</string>
    <string name="toast_calling_failed">खेद! कॉल नही लग रही</string>
    <string name="toast_content_locked">फाइल लॉक हैं</string>
    <string name="toast_state_changed">सफल</string>
    <string name="toast_state_not_changed">फेल</string>
    <string name="toast_permission_denied">खेद ! पर्मिशन नही मिलने की वजह से एप इनस्टॉल नही हुई |</string>
    <string name="toast_pause_fully_play_error">आगे बढ़ने से पहले रिकॉर्डिंग पूरी ख़त्म करें</string>
    <string name="toast_unlock_error">अगली रिकॉर्डिंग तभी जारी होगी जब चल रही रिकॉर्डिंग पूरी ख़त्म हो जाएगी</string>

</resources>