<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_listener_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_phone_num"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/iv_mute_unmute"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/cd_iv_mute_unmute"
                android:src="@drawable/mute" />

            <ImageButton
                android:id="@+id/iv_question"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/cd_iv_question"
                android:src="@drawable/query" />

            <ImageButton
                android:id="@+id/iv_online"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/cd_iv_online"
                android:src="@drawable/offline" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>