<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="io.github.varunj.sangoshthi_ivr.activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="32sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="phone"
            android:ems="12"
            android:minEms="10"
            android:maxEms="12"
            android:hint="@string/login_hint_phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorGreen"
        android:text="@string/login_btn_sign_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

</LinearLayout>
