<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="io.github.varunj.sangoshthi_ivr.activities.HomeActivity">

    <Button
        android:id="@+id/btn_host_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="@color/home_host_show"
        android:drawableLeft="@drawable/home_host_show"
        android:paddingLeft="@dimen/home_left_icon_pad"
        android:text="@string/home_host_show"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_notifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/home_notifications"
            android:layout_weight="1.0"
            android:text="@string/home_notifications"
            android:drawableTop="@drawable/home_notification"
            android:paddingTop="@dimen/home_left_icon_pad"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/home_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/home_help"
            android:layout_weight="1.0"
            android:text="@string/home_help"
            android:drawableTop="@drawable/home_help"
            android:paddingTop="@dimen/home_left_icon_pad"
            android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>